# Arm_Contest

./: .main.py.swp  .parser.cpp.swp  .util.py.swp  README.md  main.out  main.py  parser.cpp  tags  util.py
LSM9DS0/: .LSM9DS0_pyArdui.py.swp  LSM9DS0_fea.py  LSM9DS0_proc-2.py  LSM9DS0_pyArdui.py  filter.py  main.py  painter.py  sensor.py  test.py  udp_server.py  visualizer.py
LSM9DS0/example/: LSM9DS0_pyArdui.py
arm/binaryClassifier/: .MPU9250.h.swp  .main.cpp.swp  .sensor.h.swp  .testSensor.cpp.swp  binaryClassifier.cpp  binaryClassifier.h  main.cpp  main.out  sensor.h  test.cpp  testSensor.cpp
arm/classifier/: Makefile
arm/dtw/: dtw.h
arm/dtw_org/src/: test.cpp
arm/fastdtw/: .vectordtw.h.swp  main.out  point.h  vector_test.cpp  vectordtw.h
arm/main/: main.cpp
arm/moveClassifier/: .data.cpp.swp  .data.h.swp  .dtw.cpp.swp  .main.cpp.swp  .moveClassifier.cpp.swp  .moveClassifier.h.swp  MPU9250.h  binaryClassifier.cpp  classifier.cpp  classifier.h  data.cpp  data.h  dtw.cpp  dtw.h  gesture.cpp  gesture.h  hmm.cpp  hmm.h  main.cpp  moveClassifier.cpp  moveClassifier.h  sensor.h
arm/moveClassifier_bak/: classifier.cpp  data.cpp  dtw.cpp  dtw.h
arm/parser/: main.out  parser.cpp
arm/sensor/: MPU9250.h  main.cpp  sensor.h  sensor.h.bak  testSensor.cpp
arm/test/: .CMakeLists.txt.swp  .Makefile.swp  CMakeLists.txt  Makefile  Test.binaryClassifier  Test.data  Test.dtw  Test.hmm  Test.moveClassifier  text_1.txt
arm/test/data/: good_1.txt  text_1.txt  text_2.txt
arm/test/include/: binaryClassifier.h  classifier.h  dtw.h  gesture.h  moveClassifier.h  point.h
arm/test/src/binaryClassifier/: .depend.mak  .extheader.mak  binaryClassifier.cpp  binaryClassifier.h
arm/test/src/hmm/: .hmm.cpp.swp  .hmm.h.swp  hmm.cpp
arm/test/src/main/: .depend.mak  .dtw.cpp.swp  .hmm.cpp.swp  binaryClassifier.cpp  data.cpp  dtw.cpp  hmm.cpp  make.main  moveClassifier.cpp
arm/test/src/moveClassifier/: .depend.mak  .extheader.mak  data.cpp  data.h  moveClassifier.cpp  moveClassifier.h
arm/test/src/util/: .depend.mak  .extheader.mak  dtw.cpp  gesture.cpp  gesture.h  point.h
arm/test_bak/: Makefile  Test.data  Test.dtw
arm/test_bak/data/: jump_3.txt
arm_gesture_detection/: .main.cpp.swp  .sensor.cpp.swp  .sensor.h.swp  binaryClassifier.h  main.cpp  sensor.cpp  sensor.h
arm_gesture_detection/binaryClassifier/: binaryClassifier.cpp  binaryClassifier.h  test.cpp
arm_gesture_detection/classifier/: .Makefile.swp  Classifier  Makefile  SDRAM_DISCO_F469NI.lib  classifier.cpp  classifier.h  main.cpp
arm_gesture_detection/classifier/classifier/: DTW.py
arm_gesture_detection/classifier/include/: dtw.h  gesture.h
arm_gesture_detection/classifier/src/: .Makefile.in.swp  Makefile.in
arm_gesture_detection/dtw/: dtw.cpp
arm_gesture_detection/dtw/src/: .dtw.h.swp  .test.cpp.swp  dtw.cpp  dtw.h  main.cpp  test.cpp
arm_gesture_detection/dtw_org/src/: main.cpp  main.out
arm_gesture_detection/main/: .main.cpp.swp
arm_gesture_detection/mbed_org/a98efd45bfe3/: .hg_archival.txt  BSP_DISCO_F469NI.lib
arm_gesture_detection/sensor/: .sensor.h.swp
gesture_detection/: .gitignore  2  action.py  dump.py  filter.py  main.py  mbed.cpp  predict.py  predict.py.bak  recorder.py  recorder_action.py  sensor.py  test.py  test_serial.py  train.py
gesture_detection/checkpoints/train/: opt.txt
gesture_detection/checkpoints/train_0/: opt.txt
gesture_detection/checkpoints/train_1/: opt.txt
gesture_detection/checkpoints/train_10/: opt.txt
gesture_detection/checkpoints/train_11/: opt.txt
gesture_detection/checkpoints/train_12/: opt.txt
gesture_detection/checkpoints/train_13/: opt.txt
gesture_detection/checkpoints/train_14/: opt.txt
gesture_detection/checkpoints/train_15/: opt.txt
gesture_detection/classifier/: DTW.py  __init__.py  binary.py
gesture_detection/classifier_dtw/: __init__.py
gesture_detection/dataset/: __init__.py  binary_dataset.py
gesture_detection/example/: proc_try-1.py
gesture_detection/filter/: __init__.py
gesture_detection/mbed/: main.cpp  mbed.cpp
gesture_detection/models/: base_model.py  binary_model.py
gesture_detection/options/: __init__.py  action_options.py  base_options.py  main_options.py  predict_options.py  record_options.py  sensor_options.py  train_options.py
gesture_detection/pretrained/: latest_net_netClassifier.pth
gesture_detection/recorder/: __init__.py
gesture_detection/sensor/: __init__.py
gesture_detection/speech/: __init__.py
gesture_detection/utils/: __init__.py  accu_eval.py  utils.py
gesture_detection/visualizer/: __init__.py  base_visualizer.py  model_visualizer.py  painter.py  progress_visualizer.py  sensor_visualizer.py  train_visualizer.py
runs/: events.out.tfevents.1531537443.kevin-MS-7A34  events.out.tfevents.1531546800.kevin-MS-7A34
video_detection/: vocab.txt
video_detection/data/: train_y.npy
(+386 files in other folders)
